Wed Jun 18 19:08:38 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * dds/DCPS/DataDurabilityCache.cpp:
        * dds/DCPS/DataDurabilityCache.h:

          Reset allocator address stored in persistent objects retrieved
          from the backing store by using new DurabilityArray and
          DurabilityQueue classes.  Addresses a crash on process exit when
          using PERSISTENT DURABILITY.
        
          Fixed Linux build error.  The MAP_TYPE macro is already defined
          by the <sys/mman.h> system header.
        
          Reset the underlying queue after retrieving data so that the
          data is not duplicated if the DataWriter ends up reinserting the
          same data into the durability cache.

        * dds/DCPS/DurabilityArray.h:
        * dds/DCPS/DurabilityQueue.h:

          New source files containing subclasses of ACE_Array_Base<> and
          ACE_Unbounded_Queue<>, respectively, that provide a means to
          reset the allocator.  Needed to properly support persistent
          durable data that is accessed between different process runs.
        
        * tests/DCPS/PersistentDurability/publisher.cpp:
        * tests/DCPS/PersistentDurability/subscriber.cpp:
        * tests/DCPS/TransientDurability/publisher.cpp:
        * tests/DCPS/TransientDurability/subscriber.cpp:
        
          Fixed memory leaks by assigning newly allocated type support
          servant to the appropriate "_var" type.

Wed Jun 18 14:05:20 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataDurabilityCache.cpp:

          Re-applied one Borland fix and extended it to the map type as well
          as the list.

Wed Jun 18 08:00:17 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * dds/DCPS/DataDurabilityCache.cpp:

          Added missing calls to ACE_Allocator::bind()/find().  They are
          necessary for retrieving persistent data from the backing
          store.

        * dds/DCPS/DataWriterImpl.cpp: